--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,80 +21,67 @@ html{
 
 /* welcome page */
 
-#welcome-text {
-  font-size: 15vh;
-  text-align: center;
-  text-transform: uppercase;
-  animation: wave 1s forwards;
-  z-index: 999;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  display: flex;
-  flex-wrap: wrap;
-}
-
-#welcome-text span {
-  display: inline-block;
-  position: absolute;
-  left: 0;
-  top: 0;
-  opacity: 0;
-  transition: all 1s ease-in-out;
-  width: 50px;
-  height: 50px;
-}
-
-#welcome-text span:nth-child(1) {
-  animation: staircase 1s forwards 1s;
-}
-
-#welcome-text span:nth-child(2) {
-  animation: staircase 1s forwards 2s;
-}
-
-#welcome-text span:nth-child(3) {
-  animation: staircase 1s forwards 3s;
-}
-
-#welcome-text span:nth-child(4) {
-  animation: staircase 1s forwards 4s;
-}
-
-#welcome-text span:nth-child(5) {
-  animation: staircase 1s forwards 5s;
-}
-
-#welcome-text span:nth-child(6) {
-  animation: staircase 1s forwards 6s;
-}
-
-#welcome-text span:nth-child(7) {
-  animation: staircase 1s forwards 7s;
-}
-
-@keyframes staircase {
-  0% {
-    opacity: 0;
-    transform: translate(0, 0);
-  }
-  100% {
-    opacity: 1;
-    transform: translate(50px, 50px);
-  }
-}
-
-
-#welcome-page {
-  background-color: rgb(6, 56, 56);
+.welcome {
+  /* font-family: Georgia, cursive;  figure out font*/
+  background: rgb(6, 58, 58);
+  transition: opacity .5s ease-out;
+  height: 100vh;
+  font-size: 20vh;
+  color: #fff;
+  z-index: 1;
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 1;
   display: flex;
-  align-items: center;
+  flex-wrap: wrap;
   justify-content: center;
-  transition: opacity 0.5s ease-out;
+  align-items: center;
+}
+
+.w, .e, .l, .c, .o, .m, .e2 {
+  animation: showLetter 1s ease-in-out forwards;
+  opacity: 0;
+  position:relative;
+}
+
+@keyframes showLetter {
+  0% {
+    opacity: 0;
+    transform: translateY(-100%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+
+.w {
+  animation-delay: 0s;
+}
+
+.e {
+  animation-delay: 0.2s;
+}
+
+.l {
+  animation-delay: 0.4s;
+}
+
+.c {
+  animation-delay: 0.6s;
+}
+
+.o {
+  animation-delay: 0.8s;
+}
+
+.m {
+  animation-delay: 1s;
+}
+
+.e2 {
+  animation-delay: 1.2s;
 }
