--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,7 +7,7 @@ html{
 
 .welcome {
   font-family: "Rubik 80s Fade", cursive;
-  background: rgb(6, 58, 58);
+  background: rgb(5, 43, 43);
   transition: opacity .5s ease-out;
   height: 100vh;
   font-size: 20vh;
@@ -22,6 +22,46 @@ html{
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+}
+
+@media screen and (min-width: 320px) {
+  .welcome{
+    max-width: 374px;
+    font-size: 7vh;
+  }
+}
+@media screen and (min-width: 375px) {
+  .welcome{
+    transition: opacity .8s ease-out;
+    max-width: 424px;
+    font-size: 8vh;
+  }
+}
+@media screen and (min-width: 425px) {
+  .welcome{
+    transition: opacity 1s ease-out;
+    max-width: 767px;
+    font-size: 9vh;
+  }
+}
+@media screen and (min-width: 768px) {
+  .welcome{
+    transition: opacity 1s ease-out;
+    height: 100vh;
+    max-width: 1023px;
+    font-size: 10vh;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+}
+@media screen and (max-width: 1920px) {
+  .welcome{
+    transition: opacity .25s ease-out;
+    height: 100vh;
+    max-width: 100%;
+    font-size: 20vh;
+  }
 }
 
 .w, .e, .l, .c, .o, .m, .e2 {
@@ -81,20 +121,69 @@ html{
 /* body  */
 
 body{
-  background-color: rgb(5, 43, 43);
+  background-color: rgb(9, 58, 58);
 }
 /* vertical words */
 #turned{
-  color: rgb(213, 233, 233);
-  /* font-family: 'Kavoon', cursive; */
+  color: rgb(238, 205, 163);
+  font-family: "Archivo Black";
  text-transform: uppercase;
  font-weight: 900;
   writing-mode: vertical-lr;
  text-orientation: mixed;
   position: relative;
-  font-size: 9.1vh;
-  line-height: 23;
+  font-size: 8.2vh;
+  line-height: 26;
   white-space: nowrap;
   transform: translateX(-2%);
   display: block;
 }
+
+main{
+  position: relative;
+}
+
+#middleSect{
+  position: absolute;
+  top: 20%;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border: 2px solid black;
+  width: 100%;
+  height: 50%;
+  font-size: 30px;
+  z-index: -5;
+  background-image: url("../photos/gradient\ background.png");
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+#icons{
+  position: absolute;
+  left: 1%;
+  top: 30%;
+}
+
+#welcomeMsg{
+color: rgb(238, 205, 163);
+text-align: center;
+position: absolute;
+left: 15%;
+top: 30%;
+width: 20%;
+}
+
+#photo{
+  position: absolute;
+  left: 65%;
+  top: 8%;
+}
+
+#pic{
+  max-width: 400px;
+  height: 400px;
+  border-radius: 50%;
+}
+
+/* footer */
