--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,8 +6,8 @@ html{
 /* welcome page */
 
 .welcome {
-  font-family: "Rubik 80s Fade", cursive;
-  background: rgb(5, 43, 43);
+  font-family: "Rubik 80s Fade";
+  background: rgb(5, 58, 58);
   transition: opacity .5s ease-out;
   height: 100vh;
   font-size: 20vh;
@@ -22,46 +22,6 @@ html{
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-}
-
-@media screen and (min-width: 320px) {
-  .welcome{
-    max-width: 374px;
-    font-size: 7vh;
-  }
-}
-@media screen and (min-width: 375px) {
-  .welcome{
-    transition: opacity .8s ease-out;
-    max-width: 424px;
-    font-size: 8vh;
-  }
-}
-@media screen and (min-width: 425px) {
-  .welcome{
-    transition: opacity 1s ease-out;
-    max-width: 767px;
-    font-size: 9vh;
-  }
-}
-@media screen and (min-width: 768px) {
-  .welcome{
-    transition: opacity 1s ease-out;
-    height: 100vh;
-    max-width: 1023px;
-    font-size: 10vh;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-  }
-}
-@media screen and (max-width: 1920px) {
-  .welcome{
-    transition: opacity .25s ease-out;
-    height: 100vh;
-    max-width: 100%;
-    font-size: 20vh;
-  }
 }
 
 .w, .e, .l, .c, .o, .m, .e2 {
@@ -122,6 +82,7 @@ html{
 
 body{
   background-color: rgb(9, 58, 58);
+font-family: "Rubik 80s Fade";
 }
 /* vertical words */
 #turned{
@@ -132,8 +93,9 @@ body{
   writing-mode: vertical-lr;
  text-orientation: mixed;
   position: relative;
+  top: 0;
+  left: 50%;
   font-size: 8.2vh;
-  line-height: 26;
   white-space: nowrap;
   transform: translateX(-2%);
   display: block;
@@ -144,8 +106,8 @@ main{
 }
 
 #middleSect{
-  position: absolute;
-  top: 20%;
+  position: fixed;
+  top: 25%;
   left: 0;
   right: 0;
   bottom: 0;
@@ -153,7 +115,7 @@ main{
   width: 100%;
   height: 50%;
   font-size: 30px;
-  z-index: -5;
+  z-index: -10;
   background-image: url("../photos/gradient\ background.png");
   background-attachment: fixed;
   background-size: cover;
@@ -167,23 +129,218 @@ main{
 
 #welcomeMsg{
 color: rgb(238, 205, 163);
+font-family: "Alice", Georgia, 'Times New Roman', Times, serif;
 text-align: center;
-position: absolute;
-left: 15%;
-top: 30%;
-width: 20%;
+position: fixed;
+left: 10%;
+bottom: 20%;
+width: 30%;
+/* height: 50%; */
 }
 
 #photo{
-  position: absolute;
-  left: 65%;
-  top: 8%;
+  position: fixed;
+  left: 68%;
+  top: 7%;
 }
 
 #pic{
-  max-width: 400px;
-  height: 400px;
+  max-width: 45%;
+  height: 45%;
   border-radius: 50%;
 }
 
 /* footer */
+
+/* media queries */
+
+@media screen and (min-width: 320px) and (max-width: 374px) {
+  .welcome{
+    font-size: 7vh;
+  }
+
+  #photo{
+    position: absolute;
+    left: 63%;
+    top: 30%;
+  }
+  
+  #pic{
+    max-width: 90%;
+    height: 90%;
+    border-radius: 50%;
+  }
+
+  #welcomeMsg{
+    position: absolute;
+    left: 5%;
+    bottom: 30%;
+    font-size: 60%;
+  }
+
+  #turned{
+    left: 41%;
+  }
+
+}
+@media screen and (min-width: 375px) and (max-width: 424px) {
+  .welcome{
+    transition: opacity .8s ease-out;
+    font-size: 8vh;
+  }
+
+  #photo{
+    position: absolute;
+    left: 63%;
+    top: 30%;
+  }
+  
+  #pic{
+    max-width: 90%;
+    height: 90%;
+    border-radius: 50%;
+  }
+
+  #welcomeMsg{
+    position: absolute;
+    left: 7%;
+    bottom: 25%;
+    font-size: 65%;
+  }
+
+  #turned{top: 0;
+  left: 42%;
+  }
+}
+@media screen and (min-width: 425px) and (max-width: 767px) {
+  .welcome{
+    transition: opacity 1s ease-out;
+    font-size: 9vh;
+  }
+
+  #photo{
+    position: absolute;
+    left: 63%;
+    top: 30%;
+  }
+  
+  #pic{
+    max-width: 90%;
+    height: 90%;
+    border-radius: 50%;
+  }
+
+  #welcomeMsg{
+    position: absolute;
+    left: 8%;
+    bottom: 30%;
+    font-size: 70%;
+  }
+
+  #turned{top: 0;
+  left: 43%;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .welcome{
+    transition: opacity 1s ease-out;
+    height: 100vh;
+    font-size: 10vh;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #photo{
+    left: 63%;
+    top: 38%;
+  }
+  
+  #pic{
+    max-width: 87%;
+    height: 87%;
+    border-radius: 50%;
+  }
+
+  #welcomeMsg{
+    font-size: larger;
+    left: 9%;
+    top: 35%;
+  }
+
+  #turned{
+    left: 46%;
+  }
+}
+@media screen and (min-width: 1024px) and (max-width: 1439px) {
+  .welcome{
+    transition: opacity 1s ease-out;
+    height: 100vh;
+    font-size: 10vh;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #photo{
+    position: absolute;
+    left: 63%;
+    top: 7%;
+  }
+  
+  #pic{
+    max-width: 87%;
+    height: 87%;
+    border-radius: 50%;
+  }
+
+  #welcomeMsg{
+    left: 10%;
+    bottom:22%;
+  }
+}
+@media screen and (min-width: 1440px) and (max-width: 1919px) {
+  .welcome{
+    transition: opacity 1s ease-out;
+    height: 100vh;
+    font-size: 10vh;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #photo{
+    left: 68%;
+    top: 26.5%;
+  }
+  
+  #pic{
+    max-width: 70%;
+    height: 70%;
+    border-radius: 50%;
+  }
+
+  #welcomeMsg{
+    left: 10%;
+    top: 43%;
+  }
+}
+@media screen and (min-width: 1920px) and (max-width: 100%){
+  .welcome{
+    transition: opacity 1s ease-out;
+    height: 100vh;
+    font-size: 40vh;
+  }
+  #photo{
+    position: absolute;
+    left: 70%;
+    top: 9%;
+  }
+
+  #pic{
+    max-width: 40%;
+    height: 40%;
+    border-radius: 50%;
+  }
+}
+
