--- a/src/input.css
+++ b/src/input.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html{
+  overflow-x: hidden;
+}
+
 /* welcome page */ 
 .welcome {
   font-family: 'Rubik 80s Fade', cursive;
@@ -10,7 +14,6 @@
   height: 100vh;
   font-size: 30vh;
   color: #fff;
-  z-index: 1;
   position: absolute;
   top: 0;
   left: 0;
@@ -99,8 +102,10 @@
   z-index: -5;
 }
 
-#pic {
-  top: 31%;
+#photo{
+  
+  width: 30%;
+  height: 30%;
 }
 
 #turned {
@@ -113,9 +118,21 @@
   white-space: nowrap;
   transform: translateX(-2%);
   display: block;
+  z-index: -2;
+  margin-block: 50%;
 }
 
-@media screen and (max-width: 390px) {
+#navHeader{
+  z-index: 0;
+}
+
+@media screen and (min-width: 1920px) {
+  #turned {
+    margin-block: 47%;
+  }
+}
+
+/* @media screen and (max-width: 390px) {
   .welcome {
     font-size: 8vh;
   }
@@ -155,12 +172,12 @@
   }
 
   #pic {
-    top: 32%;
-    right: 12%;
+    left: 68%;
   }
 
   #welcomeMsg {
-    left: 10%;
+    left: 9%;
+    bottom: 22%;
   }
 }
 @media screen and (min-width: 1440px) {
@@ -177,4 +194,4 @@
     right: 16%;
     top: 33%;
   }
-}
+} */
